fix invisible images on acknowledgement page because of missing height

--- a/voyages/sitemedia/scss/about.scss
+++ b/voyages/sitemedia/scss/about.scss
@@ -109,16 +109,13 @@ h2 {
   }
 
   .sponsor-logo {
-    height: 100%;
-    margin-right: 1.5rem;
+    height: auto;
+    margin-right: 2rem;
     width: 250px;
   }
 }
 
 @media (max-width: 691px) {
-  .site-story {
-      /*font-size: 0.9rem;*/
-  }
   .design {
     text-align: left;
   }
